# yaSpeechToText

./: .env.sample  .gitignore  README.md  aac_to_text.ipynb  pyproject.toml  деплой.txt
src/: audio_convert.py  config.py  file.py  ya_obj_storage.py  ya_speech_to_text.py
